--- a/application.yaml
+++ b/application.yaml
@@ -7,3 +7,9 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+
+okta:
+  oauth2:
+    issuer: https://dev-55015959.okta.com/oauth2/default
+    audience: api://default
+
